--- a/MyZhiHuWeb/Components/_Imports.razor
+++ b/MyZhiHuWeb/Components/_Imports.razor
@@ -8,4 +8,8 @@
 @using Microsoft.JSInterop
 @using MyZhiHuWeb
 @using MyZhiHuWeb.Components
+@using MyZhiHuWeb.Components.Layout
+@using MyZhiHuWeb.Models
+@using MyZhiHuWeb.Services
 @using AntDesign
+@using Newtonsoft.Json
