--- a/MyZhiHuWeb/Components/Layout/MainLayout.razor
+++ b/MyZhiHuWeb/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using MyZhiHuWeb.Services
+@inherits LayoutComponentBase
 
 <div class="page">
     <main>
@@ -18,3 +19,13 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    [Inject]
+    private HttpService HttpService { get; set; } = null!;
+
+    protected override async void OnInitialized()
+    {
+        var res = await HttpService.PostAsync<string>("/api/user/info");
+    }
+}
