--- a/MyZhiHuWeb/Components/App.razor
+++ b/MyZhiHuWeb/Components/App.razor
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="MyZhiHuWeb.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <title>Home</title>
     <HeadOutlet/>
 </head>
 
 <body>
-<Routes/>
+<Routes @rendermode="InteractiveServer" />
 <AntContainer/>
 <script src="_framework/blazor.web.js"></script>
 </body>
