--- a/MyZhiHuWeb/Components/_Imports.razor
+++ b/MyZhiHuWeb/Components/_Imports.razor
@@ -1,5 +1,8 @@
-﻿@using System.Net.Http
+﻿@using System.ComponentModel.DataAnnotations
+@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Security.Cryptography
+@using System.Text
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -13,3 +16,5 @@
 @using MyZhiHuWeb.Services
 @using AntDesign
 @using Newtonsoft.Json
+@inject NavigationManager Manager
+@inject HttpService Http
