--- a/MyZhiHuWeb/Components/_Imports.razor
+++ b/MyZhiHuWeb/Components/_Imports.razor
@@ -16,5 +16,6 @@
 @using MyZhiHuWeb.Services
 @using AntDesign
 @using Newtonsoft.Json
+@using UEditor
 @inject NavigationManager Manager
 @inject HttpService Http
