--- a/MyZhiHuWeb/Components/_Imports.razor
+++ b/MyZhiHuWeb/Components/_Imports.razor
@@ -17,5 +17,7 @@
 @using AntDesign
 @using Newtonsoft.Json
 @using UEditor
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.RichTextEditor
 @inject NavigationManager Manager
 @inject HttpService Http
